# GenomeKit

./: .clang-format  .gitignore  CMakeLists.txt  Distance.cpp  GeneSig-create.cpp  GeneSigDistance  GeneSigDistance-partition.cpp  GeneSigDistance-tfidf.cpp  GeneSigDistance.cpp  RIGenes.cpp  RIGenome.cpp  RandomIndexing.cpp  SemanticNeuralNetwork-MultiThread.cpp  SemanticNeuralNetwork-SingleThread.cpp  SemanticNeuralNetwork-Text.cpp  SemanticNeuralNetwork-kmer.cpp  SemanticNeuralNetwork.cpp  SemanticNeuralNetwork.hpp  SemanticStat.cpp  SequenceGenerator.cpp  Util.h  Util.hpp  gcloud-setup.sh  main.cpp  upload-bigdata-09.sh  upload-bigdata.sh
BakCode/: GeneSigDistance-singleThread.cpp  GeneSigDistance.cpp
PyScript/: blast_to_trec_result.py  clustal_distance_to_trec_result.py  gene_distance_score.py  gene_sig_create.py  genome_distance_test.py  kmer_count.py  split_fasta_kmer_count.py  theanets_autoencoder.py  trec_eval_rel.py
PyScript-KmerSemantic/: CreateDataFromKmerCount.py  GenomeToKmers.py  sklearn-regression-test.py  sklearn-regression.py
Script/: GenSimD2vec.py  GenSimLDA-topic.py  GenSimLDA.py  GenSimWord2Vec.py  GenomeCombine.sh  blast_to_trec_result.py  blast_to_trec_result_protein.py  clustal_distance_to_trec_result.py  create_random_sig.py  create_random_sig2.py  family-group-to-trec-result.py  find_searching_number.py  format-swissprot.py  geneLDA.py  gene_distance_score.py  gene_sig_create.py  gene_sig_create_label.py  gene_sig_create_protein-training-data.py  gene_sig_create_protein.py  generate_bow_signature.py  homologs_to_trec_rel.py  kmeans-scipy.py  kmeans.py  kmer_count_vector.py  kmer_distribution.py  kmer_list.py  randomindexing.sh  real_to_binary_sig.py  recreate_date_file.py  reproduce_sig_file.py  run-sig-trec-eval.sh  sequence_count.py  sequence_retrival_trec_res.sh  show_vector_to_grey.py  svm-ROC-PR-compare-representations.py  svm-ROC-PR.py  svm.py  test.py  test_khmer.py  tf-idf.sh  (+6 more)
